@@ -8,12 +8,13 @@ extern PyObject* builder;
 extern PyObject* missing_obj;
 
 /* This typedef is included in the Flex generated lexer.h header, but
- * it is needed in the Bison generted header grammar.h that needs to
+ * it is needed in the Bison generated header grammar.h that needs to
  * be included before lexer.h. Repeat it here and make sure to include
  * the headers in the right order. */
 typedef void* yyscan_t;
 
-#define YY_DECL int yylex (YYSTYPE * yylval_param, YYLTYPE * yylloc_param, yyscan_t yyscanner)
+/* Lexer interface required by Bison. */
+#define YY_DECL int yylex(YYSTYPE * yylval_param, YYLTYPE * yylloc_param, yyscan_t yyscanner)
 
 /* #define DO_TRACE_ERRORS   1 */
 
@@ -31,6 +32,5 @@ typedef void* yyscan_t;
 #else
 #  define TRACE_ERROR(...)
 #endif
-
 
 #endif /* BEANCOUNT_BUILDER_H */
